Looking for data

--- a/Laboratorios/Lab2_DiegoAlbor.ipynb
+++ b/Laboratorios/Lab2_DiegoAlbor.ipynb
@@ -13,6 +13,390 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importaciones de librerías "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config IPCompleter.greedy=True\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mainpath = \"./datasets\"\n",
+    "filename= \"anexos_exp_dic19.xls\"\n",
+    "fullpath = os.path.join(mainpath, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_excel(fullpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EXPORTACIONES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONTENIDO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 1 - Exportaciones de Colombia, según gr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 2 - Exportaciones, según grupos de prod...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 3 - Exportaciones, según grupos de prod...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 4 - Principales productos exportados se...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 5 - Exportaciones, según países de destino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 6 - Exportaciones según CUCI Rev. 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 7 - Exportaciones, según aduanas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 8 - Exportaciones colombianas,  por gru...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 9 - Exportaciones colombianas  por prin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 10 - Exportaciones, según capítulos del...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 11 - Exportaciones, según departamento ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 12 - Exportaciones totales, según inten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 13 - Exportaciones de Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 14 - Exportaciones, según principales p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 15 - Exportaciones según principales ca...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 16 - Exportaciones según clasificación ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 17 - Exportaciones según CIIU Rev. 4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 18 - Exportaciones de la agrupación: pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 19 - Exportaciones de la agrupación: pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 20 - Exportaciones de la agrupación: co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 21 - Exportaciones de la agrupación: ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 22 - Exportaciones de la agrupación: ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 23 - Exportaciones, según grupos de pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 24 - Exportaciones, según principal paí...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 25 - Exportados de petróleo crudo, segú...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 26 - Exportaciones según principal país...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 27 - Exportaciones destinadas a la Comu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 28 - Exportaciones destinadas a la Comu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 29 - Exportaciones totales declaradas s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 30 - Exportaciones de Colombia, de las ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 31 - Exportaciones de Colombia, según e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cuadro 32 - Exportaciones mensuales de Colombi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Diciembre de 2019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0  Unnamed: 1                                         Unnamed: 2\n",
+       "0          NaN         NaN                                                NaN\n",
+       "1          NaN         NaN                                                NaN\n",
+       "2          NaN         NaN                                                NaN\n",
+       "3          NaN         NaN                                                NaN\n",
+       "4          NaN         NaN                                      EXPORTACIONES\n",
+       "5          NaN         NaN                                                NaN\n",
+       "6          NaN         NaN                                         CONTENIDO \n",
+       "7          NaN         NaN  Cuadro 1 - Exportaciones de Colombia, según gr...\n",
+       "8          NaN         NaN  Cuadro 2 - Exportaciones, según grupos de prod...\n",
+       "9          NaN         NaN  Cuadro 3 - Exportaciones, según grupos de prod...\n",
+       "10         NaN         NaN  Cuadro 4 - Principales productos exportados se...\n",
+       "11         NaN         NaN  Cuadro 5 - Exportaciones, según países de destino\n",
+       "12         NaN         NaN         Cuadro 6 - Exportaciones según CUCI Rev. 3\n",
+       "13         NaN         NaN            Cuadro 7 - Exportaciones, según aduanas\n",
+       "14         NaN         NaN  Cuadro 8 - Exportaciones colombianas,  por gru...\n",
+       "15         NaN         NaN  Cuadro 9 - Exportaciones colombianas  por prin...\n",
+       "16         NaN         NaN  Cuadro 10 - Exportaciones, según capítulos del...\n",
+       "17         NaN         NaN  Cuadro 11 - Exportaciones, según departamento ...\n",
+       "18         NaN         NaN  Cuadro 12 - Exportaciones totales, según inten...\n",
+       "19         NaN         NaN              Cuadro 13 - Exportaciones de Colombia\n",
+       "20         NaN         NaN  Cuadro 14 - Exportaciones, según principales p...\n",
+       "21         NaN         NaN  Cuadro 15 - Exportaciones según principales ca...\n",
+       "22         NaN         NaN  Cuadro 16 - Exportaciones según clasificación ...\n",
+       "23         NaN         NaN        Cuadro 17 - Exportaciones según CIIU Rev. 4\n",
+       "24         NaN         NaN  Cuadro 18 - Exportaciones de la agrupación: pr...\n",
+       "25         NaN         NaN  Cuadro 19 - Exportaciones de la agrupación: pr...\n",
+       "26         NaN         NaN  Cuadro 20 - Exportaciones de la agrupación: co...\n",
+       "27         NaN         NaN  Cuadro 21 - Exportaciones de la agrupación: ma...\n",
+       "28         NaN         NaN  Cuadro 22 - Exportaciones de la agrupación: ma...\n",
+       "29         NaN         NaN  Cuadro 23 - Exportaciones, según grupos de pro...\n",
+       "30         NaN         NaN  Cuadro 24 - Exportaciones, según principal paí...\n",
+       "31         NaN         NaN  Cuadro 25 - Exportados de petróleo crudo, segú...\n",
+       "32         NaN         NaN  Cuadro 26 - Exportaciones según principal país...\n",
+       "33         NaN         NaN  Cuadro 27 - Exportaciones destinadas a la Comu...\n",
+       "34         NaN         NaN  Cuadro 28 - Exportaciones destinadas a la Comu...\n",
+       "35         NaN         NaN  Cuadro 29 - Exportaciones totales declaradas s...\n",
+       "36         NaN         NaN  Cuadro 30 - Exportaciones de Colombia, de las ...\n",
+       "37         NaN         NaN  Cuadro 31 - Exportaciones de Colombia, según e...\n",
+       "38         NaN         NaN  Cuadro 32 - Exportaciones mensuales de Colombi...\n",
+       "39         NaN         NaN                                                NaN\n",
+       "40         NaN         NaN                                  Diciembre de 2019"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
