Working in data search

--- a/Laboratorios/Lab2_DiegoAlbor.ipynb
+++ b/Laboratorios/Lab2_DiegoAlbor.ipynb
@@ -8,11 +8,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<ul>\n",
+    "    <li>\n",
+    "       <a> https://www.dane.gov.co/index.php/estadisticas-por-tema/comercio-internacional/exportaciones</a>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <a> https://www.dnp.gov.co/programas/desarrollo-empresarial/comercio-exterior-e-inversion-extranjera/Paginas/estadisticas.aspx </a>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <a> https://www.mincit.gov.co/estudios-economicos/estadisticas-e-informes </a>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <a> https://www.vuce.gov.co/servicio-al-ciudadano/estadisticas-registradas-bacex </a>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <a> https://bi.vuce.gov.co/analytics/saw.dll?dashboard </a>\n",
+    "    </li>\n",
+    "</ul>\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
