Working in lab 3

--- a/Iris.ipynb
+++ b/Iris.ipynb
@@ -964,6 +964,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import gmtime, strftime\n",
+    "hora = strftime(\"%I:%M%p\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "04:42PM\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xDF\n"
+     ]
+    }
+   ],
+   "source": [
+    "if hora == \"04:42PM\":\n",
+    "    print(\"xDF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
