--- a/Laboratorios/Lab6/Lab6_AlborDiego.ipynb
+++ b/Laboratorios/Lab6/Lab6_AlborDiego.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -69,44 +69,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>58882</td>\n",
-       "      <td>63168</td>\n",
+       "      <th>83957</th>\n",
+       "      <td>195005</td>\n",
+       "      <td>13817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>58959</td>\n",
-       "      <td>63322</td>\n",
+       "      <th>83958</th>\n",
+       "      <td>195015</td>\n",
+       "      <td>15007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>59034</td>\n",
-       "      <td>60585</td>\n",
+       "      <th>83959</th>\n",
+       "      <td>195022</td>\n",
+       "      <td>12918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>59145</td>\n",
-       "      <td>61717</td>\n",
+       "      <th>83960</th>\n",
+       "      <td>195026</td>\n",
+       "      <td>13205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>59164</td>\n",
-       "      <td>59757</td>\n",
+       "      <th>83961</th>\n",
+       "      <td>195029</td>\n",
+       "      <td>12346</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       X      Y\n",
-       "0  58882  63168\n",
-       "1  58959  63322\n",
-       "2  59034  60585\n",
-       "3  59145  61717\n",
-       "4  59164  59757"
+       "            X      Y\n",
+       "83957  195005  13817\n",
+       "83958  195015  15007\n",
+       "83959  195022  12918\n",
+       "83960  195026  13205\n",
+       "83961  195029  12346"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
     "#Importando los datos\n",
     "sindata = pd.read_excel('Sin2.xlsx',header=None,names=['X','Y'])\n",
     "sindata2 =  sindata.values\n",
-    "sindata.head()"
+    "sindata.tail()"
    ]
   },
   {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Comparando los coeficientes, es posible observar que para un epsilon de 0.02 es mayor que para un epslion de 0.2, cosa que no se ve a simple vista.</p>"
+    "<p>Comparando los coeficientes, es posible observar que para un epsilon de 0.02 es mayor que para un epslion de 0.2, cosa que no se ve a simple vista. Ahora bien, aún así DBSCAN sigue teniendo un coeficiente menor y es que esto se presenta porque si observamos, solo se modificó el Epsilon más no el Min_samples y es que no es posible modificarlo al valor que muestra la gráfica que es 80.000, pues al hacerlo todos los puntos se mostrarían como ruido. </p>"
    ]
   },
   {
@@ -989,6 +989,13 @@
     "plt.title('Clusters FIFA Players')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Overall')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Si bien, se había escogido un K=4 por Elbow Method, analizando los Silohuttes, se observa que el mejor K es 2. Por lo tanto hubo una mala elección al momento de escoger el K</p>"
    ]
   },
   {
