--- a/Laboratorios/Lab6/Lab6_AlborDiego.ipynb
+++ b/Laboratorios/Lab6/Lab6_AlborDiego.ipynb
@@ -1024,7 +1024,6 @@
     "\n",
     "    return amount\n",
     "\n",
-    "# Apply currency transform\n",
     "fifadata.loc[:, \"Value\"] = fifadata[\"Value\"].apply(lambda value: currency_transform(value))"
    ]
   },
@@ -1052,19 +1051,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of clusters: 5\n",
-      "Number of total groups: 5\n"
+      "Number of clusters: 4\n",
+      "Number of total groups: 4\n"
      ]
     }
    ],
    "source": [
+    "#Como no es posible gráficar 6 dimensiones, se calcula el número de clusters que se formaron\n",
     "labels = kmeans.labels_\n",
     "n_clusters_ = len(set(labels))-(1 if -1 in labels else 0)\n",
     "print('Number of clusters: %0.0f' % n_clusters_)\n",
